Fix html categories

--- a/index.html
+++ b/index.html
@@ -7,28 +7,40 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
+
 <body>
 
-  <article>
-    <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
+  <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
+    <article>
       <h2>Dung Beetle</h2>
-      <br>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.<br>
+      <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
-      <dl>
-        <dt>Kingdom: Animalia</dt>
-        <dd>Phylum: Arthropoda</dd>
-        <dd>Class: Insecta</dd>
-        <dd>Order: Coleoptera</dd>
-        <dd>Suborder: Polyphaga</dd>
-        <dd>Superfamily: Scarabaeoidea</dd>
-        <dd>Family: Scarabidae</dd>
+      <dl class="category">
+        <dt>Kingdom</dt>
+        <dd>Phylum</dd>
+        <dd>Class</dd>
+        <dd>Order</dd>
+        <dd>Suborder</dd>
+        <dd>Superfamily</dd>
+        <dd>Family</dd>
+      </dl>
+
+      <dl class="type">
+        <dt>Animalia</dt>
+        <dd>Arthropoda</dd>
+        <dd>Insecta</dd>
+        <dd>Coleoptera</dd>
+        <dd>Polyphaga</dd>
+        <dd>Scarabaeoidea</dd>
+        <dd>Scarabidae</dd>
       </dl>
 
       <footer>
         <span class="btn">Learn more...</span>
       </footer>
-    </a>
-  </article>
+
+    </article>
+  </a>
 
 </body>
 </html>
