Fix css text margins

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
     <article>
       <h2>Dung Beetle</h2>
-      <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
+      <p class="one">Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times</p>
+      <p class="two">heavier than itself in one night.</p>
 
       <dl class="category">
         <dt>Kingdom</dt>
